2004-01-30  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/libmudflap.c/pass36-frag.c: Add missing free() call.
	* testsuite/libmudflap.c/pass46-frag.c: New test for -fmudflapir.
	* testsuite/libmudflap.cth/cthfrags.exp: Add -DSTATIC to compiler
	flags for static linking permutation.
	* testsuite/libmudflap.cth/pass40-frag.c: When -DSTATIC, avoid
	some pthreads code that croaks on linux glibc tls.

2004-01-27  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/libmudflap.c/fail31-frag.c, pass45-frag.c: New tests.

2004-01-15  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/libmudflap.c/pass44-frag.c: New test.

2004-01-12  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/libmudflap.c/fail{28,29,30}-frag.c: New tests.

2004-01-08  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/libmudflap.c/pass43-frag.c: Added missing program rc.

2003-12-11  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/libmudflap.c/pass42-frag.c, pass43-frag.c: New tests.

2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR libmudflap/12670
	* configure.in: Add check for see if
	socklen_t typedef is in sys/socket.h.
	* mf-hooks1.c: Add define if socklen_t
	is not typedef.
	* mf-hooks2.c: Likewise.
	* mf-hooks3.c: Likewise.
	* config.h.in: Regen.
	* configure: Regen.

2003-12-08  Frank Ch. Eigler  <fche@redhat.com>

	* mf-runtime.c (__mf_watch_or_not): Tweak tracing message.
	* testsuite/libmudflap.c/fail21-frag.c: Defeat aliasing
	optimizations.
	* testsuite/libmudflap.c/pass25-frag.c: Ditto.
	* testsuite/libmudflap.c/pass26-frag.c: Tolerate non-overlapping
	(unoptimized) allocation of stack space.

2003-12-07  Richard Henderson  <rth@redhat.com>

	* testsuite/libmudflap.c/fail23-frag.c (main): Adjust addend to 11.
	* testsuite/libmudflap.c/fail27-frag.c (foo): Mark noinline.

2003-12-06  Andrew Pinski <apinski@apple.com>

	partial PR libmudflap/12670
	* mf-hooks1.c: Respect Darwin checks.  Conditionalize POSIX_SOURCE.
	* mf-hooks2.c: Likewise.
	* mf-hooks3.c: Likewise.
